fix text baseline alignment on bottom bar
line up the baseline of the text inside the two bottom tabs with the text outside it

https://www.dropbox.com/s/3heszqvulxi51b4/Screenshot%202015-08-18%2015.17.04.png?dl=1

--- a/styles/linter-plus.less
+++ b/styles/linter-plus.less
@@ -102,6 +102,8 @@ linter-bottom-tab {
   background: fade(@button-background-color, 33%);
   cursor: pointer;
   vertical-align: middle;
+  position: relative;
+  top: -2px;
   &:first-of-type {
     border-top-left-radius: @component-border-radius;
     border-bottom-left-radius: @component-border-radius;
